--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	 
 	"require": {
 		"php": ">=5.3.0",  
+		"yiisoft/yii": ">=1.1.14",
 		"swiftmailer/swiftmailer": "5.1.*@dev"  
 	},
         "autoload": {
