--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	 
 	"require": {
 		"php": ">=5.3.0",   
-		"swiftmailer/swiftmailer": "5.1.*@dev"  
+		 "yiisoft/yii": ">=1.1.14"  
 	},
         "autoload": {
 	        "classmap": [
