--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	 
 	"require": {
 		"php": ">=5.3.0",   
-		 "yiisoft/yii": ">=1.1.14"  
+		 "yiisoft/yii": ">=1.1.14",
+		 "endroid/qrcode": "1.*@dev"
 	},
         "autoload": {
 	        "classmap": [
