--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !\.(jpg|jpeg|png|gif|bmp)$ 
-RewriteRule /upload/(.*)$ /imagine.html?id=upload/$1 [NC,R,L]  
+RewriteRule /upload/(.*)$ /imagecache?id=upload/$1 [NC,R,L]  
  
